2010-10-01
 Do not check proc/method name against variables

2010-09-30
 Make command line -s search in the list of builtin databases

Version 1.1.11

2010-09-30
 Added inline keyword for alias

2010-09-25
 Changed novar to only suppress errors, not suppress tracking, to better
 support OO, e.g. in instrumenting.

2010-06-03
 Handle simple string substitution in ##nagelfar copy

2010-05-28
 Added syntax tokens for proc and method definitions.
 Make sure commands with definitions get through the first pass.
 Command "proc" is now handled through the new token. 

2010-05-25
 Added a syntax token for object definitions.

2010-05-23
 Added a syntax token for definitions.

2010-05-23
 Handle implicit variables, to support OO better.
 Handle if some other namespace defines "proc".

2010-05-18
 Handle tailcall.
 Made messages more consistent.

Version 1.1.10

2010-05-16
 Added more of zlib and tcl::prefix in syntaxbuild.
 Added more of chan in syntaxbuild.

2010-05-16
 Corrected output in db browser. Fixed GUI test for db browser.

2010-05-16
 More OO in syntaxbuild.
 Handle when a token "s" is not first.

2010-05-12
 Search down all namespaces for a command.
 Include all preceeding arguments in a virtual namespace.

2010-05-11
 Restored token cn behaviour to virtual namespace.
 Include more oo in 8.6 database.

2010-05-10
 Added info about more 8.6 commands to syntax db.

2010-05-10
 Added syntax token cv for variable list+code combination.
 Added a check for malformed argument list to a proc.

2010-05-10
 Cleaned up code syntax tokens. Renamed C to cg for global context.
 Made cn work reasonably. Added tests for cg, cn and cl.

2010-05-09
 Added inline syntax of "copy", to copy syntax from command to command

2010-05-09
 Added inline syntax of "subcmd+", to handle adding subcmds.

2010-05-09
 Handle -- better in some cases.
 Include msgcat, namespace which, and 8.6 catch in syntaxbuild.
 Experiment to test TDBC

2009-12-21